syntax = "proto3";

option csharp_namespace = "Algorithm.Former";
import "common.proto";
import "google/protobuf/empty.proto";

package TradeBot.Algorithm.Former;

service AlgorithmObserverService
{	
	/*
		Подписывается на алгоритм с целью узнать оптимальную цену, ниже которой можно будет покупать
	*/
	rpc SubscribePurchasePrice (SubscribePurchasePriceRequest) returns (stream SubscribePurchasePriceReply);
}
message SubscribePurchasePriceRequest
{
	google.protobuf.Empty empty = 1;
}
message SubscribePurchasePriceReply
{
	double PurchasePrice = 1;
}